22.04.2022
==========
release v6.2.6
still supporting OpenSSL 1.1


09.04.2022
==========
hcxpsktool: added new option
--alticeoptimum     : include weak Altice/Optimum candidates (MyAltice)


01.12.2021
==========
release v6.2.5
still supporting OpenSSL 1.1


23.10.2021
==========
added generic hcxtools.1 man page 


22.10.2021
==========
removed manpages, because they are only a duplicate of the help menu
moved installation path from /usr/local/bin to /usr/bin


14.10.2021
==========
hcxpsktool: renamed option --askeyarris to --spectrum


25.09.2021
==========
hcxhashtool: added new option to filter by replay count not checked (nonce-error-corrections mandatory)
--rc-not                     : filter EAPOL pairs by replaycount status not checked


17.09.2021
==========
hcxhashtool: renamed option --notauthorized to --challenge
             added additional information about filtered MESSAGE PAIRS for this options


14.09.2021
==========
release v6.2.4
This is the last version, supporting OpenSSL 1.1
Next version 6.3.0 will need OpenSSL 3.0.0


01.09.2021
==========
hcxpcapngtool: added new option to retrieve information about the ACCESS POINT
               As initial start, if transmitted, MAC_AP, MANUFACTURER, MODELNAME, SERIALNUMBER and DEVICENAME are stored (delimited by tab).
-D <file> : output device information list
            format MAC <tab> MANUFACTURER <tab> MODELNAME <tab> SERIALNUMBER <tab> DEVICENAME <tab> UUID E


28.08.2021
==========
wlancap2wpasec: added upload progress information
whoismac: added download progress information
hcxhashtool: added download progress information
hcxhashtool: added more info options (https://github.com/ZerBea/hcxtools/issues/195)
--info=<file>                : output detailed information about content of hash file
                               not in combination with --vendor, --vendor-ap or --vendor-client
--info=stdout                : stdout output detailed information about content of hash file