@@ -17,6 +17,8 @@
 #define HCX_HCCAP_OUT_DEPRECATED		17
 #define HCX_PMKIDEAPOLJTR_OUT_DEPRECATED	18
 #define HCX_PREFIX_OUT				19
+#define HCX_CUSTOM_ESSID            20
+#define HCX_CUSTOM_ESSID_SHORT      'e'
 #define HCX_PMKIDEAPOL_OUT			'o'
 #define HCX_ESSID_OUT				'E'
 #define HCX_ESSIDPROBEREQUEST_OUT		'R'
